--- a/library69/src/main/resources/application.properties
+++ b/library69/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=library69
 logging.level.root=INFO
 
 spring.profiles.active=dev
-mysql-host=localhost:3306
+mysql-uri=jdbc:mysql://localhost:3306/library
 mysql-username=jbdl69dl
 mysql-password=Abhishek@123
 
