--- a/library69/src/main/resources/application.properties
+++ b/library69/src/main/resources/application.properties
@@ -6,4 +6,11 @@ mysql-uri=jdbc:mysql://localhost:3306/library
 mysql-username=jbdl69dl
 mysql-password=Abhishek@123
 
-a=10
+
+spring.datasource.url=jdbc:mysql://localhost:3306/library
+spring.datasource.username=jbdl69dl
+spring.datasource.password=Abhishek@123
+
+spring.jpa.show-sql: true
+
+spring.jpa.hibernate.ddl-auto=update
